--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,6 +7,7 @@ set(CPPUTEST_LDFLGAS CppUTest CppUTestExt)
 add_executable(
     run_all_tests
     "run_all_tests.cpp"
+    "test_add_binary.cpp"
     "test_insertion_sort.cpp"
     "test_linear_search.cpp"
 )
@@ -14,6 +15,7 @@ add_executable(
 # target link libraries
 target_link_libraries(
     run_all_tests
+    add_binary
     insertion_sort
     linear_search
     ${CPPUTEST_LDFLGAS}
