--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 
 # add library
 add_library(add_binary STATIC "add_binary.cpp")
+add_library(binary_insertion_sort STATIC "binary_insertion_sort.cpp")
 add_library(binary_search STATIC "binary_search.cpp")
 add_library(insertion_sort STATIC "insertion_sort.cpp")
 add_library(linear_search STATIC "linear_search.cpp")
@@ -18,6 +19,7 @@ add_executable(
 target_link_libraries(
     ${PROJECT_NAME}
     add_binary
+    binary_insertion_sort
     binary_search
     insertion_sort
     linear_search
