--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 add_library(add_binary STATIC "add_binary.cpp")
 add_library(binary_insertion_sort STATIC "binary_insertion_sort.cpp")
 add_library(binary_search STATIC "binary_search.cpp")
+add_library(bubble_sort STATIC "bubble_sort.cpp")
 add_library(find_sum_pair STATIC "find_sum_pair.cpp")
 add_library(hybrid_sort STATIC "hybrid_sort.cpp")
 add_library(insertion_sort STATIC "insertion_sort.cpp")
@@ -23,6 +24,7 @@ target_link_libraries(
     add_binary
     binary_insertion_sort
     binary_search
+    bubble_sort
     find_sum_pair
     hybrid_sort
     insertion_sort
