--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(add_binary STATIC "add_binary.cpp")
 add_library(binary_insertion_sort STATIC "binary_insertion_sort.cpp")
 add_library(binary_search STATIC "binary_search.cpp")
 add_library(bubble_sort STATIC "bubble_sort.cpp")
+add_library(count_inversions STATIC "count_inversions.cpp")
 add_library(find_sum_pair STATIC "find_sum_pair.cpp")
 add_library(horners_rule STATIC "horners_rule.cpp")
 add_library(hybrid_sort STATIC "hybrid_sort.cpp")
@@ -26,6 +27,7 @@ target_link_libraries(
     binary_insertion_sort
     binary_search
     bubble_sort
+    count_inversions
     find_sum_pair
     horners_rule
     hybrid_sort
