--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -12,6 +12,7 @@ add_executable(
     "test_binary_search.cpp"
     "test_bubble_sort.cpp"
     "test_count_inversions.cpp"
+    "test_find_maximum_subarray.cpp"
     "test_find_sum_pair.cpp"
     "test_horners_rule.cpp"
     "test_hybrid_sort.cpp"
@@ -29,6 +30,7 @@ target_link_libraries(
     binary_search
     bubble_sort
     count_inversions
+    find_maximum_subarray
     find_sum_pair
     horners_rule
     hybrid_sort
