--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,6 +8,7 @@ add_library(bubble_sort STATIC "bubble_sort.cpp")
 add_library(count_inversions STATIC "count_inversions.cpp")
 add_library(find_maximum_subarray STATIC "find_maximum_subarray.cpp")
 add_library(find_sum_pair STATIC "find_sum_pair.cpp")
+add_library(heap_sort STATIC "heap_sort.cpp")
 add_library(horners_rule STATIC "horners_rule.cpp")
 add_library(hybrid_sort STATIC "hybrid_sort.cpp")
 add_library(insertion_sort STATIC "insertion_sort.cpp")
@@ -33,6 +34,7 @@ target_link_libraries(
     count_inversions
     find_maximum_subarray
     find_sum_pair
+    heap_sort
     horners_rule
     hybrid_sort
     insertion_sort
