--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable(
     "test_insertion_sort.cpp"
     "test_linear_search.cpp"
     "test_merge_sort.cpp"
+    "test_priority_queue.cpp"
     "test_randomization.cpp"
     "test_selection_sort.cpp"
     "test_square_matrix_multiply.cpp"
@@ -41,6 +42,7 @@ target_link_libraries(
     insertion_sort
     linear_search
     merge_sort
+    priority_queue
     randomization
     selection_sort
     square_matrix_multiply
