--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -21,10 +21,12 @@ add_executable(
     "test_insertion_sort.cpp"
     "test_linear_search.cpp"
     "test_merge_sort.cpp"
+    "test_monge_array.cpp"
     "test_priority_queue.cpp"
     "test_randomization.cpp"
     "test_selection_sort.cpp"
     "test_square_matrix_multiply.cpp"
+    "test_young_tableau.cpp"
 )
 
 # target link libraries
@@ -44,9 +46,11 @@ target_link_libraries(
     insertion_sort
     linear_search
     merge_sort
+    monge_array
     priority_queue
     randomization
     selection_sort
     square_matrix_multiply
+    young_tableau
     ${CPPUTEST_LDFLGAS}
 )
