Add fuzzy_sort and TODOs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(count_inversions STATIC "count_inversions.cpp")
 add_library(d_ary_heap STATIC "d_ary_heap.cpp")
 add_library(find_maximum_subarray STATIC "find_maximum_subarray.cpp")
 add_library(find_sum_pair STATIC "find_sum_pair.cpp")
+add_library(fuzzy_sort STATIC "fuzzy_sort.cpp")
 add_library(heap_sort STATIC "heap_sort.cpp")
 add_library(horners_rule STATIC "horners_rule.cpp")
 add_library(hybrid_sort STATIC "hybrid_sort.cpp")
@@ -40,6 +41,7 @@ target_link_libraries(
     d_ary_heap
     find_maximum_subarray
     find_sum_pair
+    fuzzy_sort
     heap_sort
     horners_rule
     hybrid_sort
