--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(
     "test_count_inversions.cpp"
     "test_counting_sort.cpp"
     "test_d_ary_heap.cpp"
+    "test_fibonacci.cpp"
     "test_find_maximum_subarray.cpp"
     "test_find_sum_pair.cpp"
     "test_fuzzy_sort.cpp"
@@ -46,6 +47,7 @@ target_link_libraries(
     count_inversions
     counting_sort
     d_ary_heap
+    fibonacci
     find_maximum_subarray
     find_sum_pair
     fuzzy_sort
