--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,6 +33,7 @@ add_library(rod_cutting STATIC "rod_cutting.cpp")
 add_library(selection_sort STATIC "selection_sort.cpp")
 add_library(selection STATIC "selection.cpp")
 add_library(square_matrix_multiply STATIC "square_matrix_multiply.cpp")
+add_library(stack STATIC "stack.cpp")
 add_library(water_jugs STATIC "water_jugs.cpp")
 add_library(young_tableau STATIC "young_tableau.cpp")
 
@@ -77,6 +78,7 @@ target_link_libraries(
     selection_sort
     selection
     square_matrix_multiply
+    stack
     water_jugs
     young_tableau
 )
