--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -39,6 +39,7 @@ add_executable(
     "test_selection_sort.cpp"
     "test_selection.cpp"
     "test_square_matrix_multiply.cpp"
+    "test_stack.cpp"
     "test_water_jugs.cpp"
     "test_young_tableau.cpp"
 )
@@ -78,6 +79,7 @@ target_link_libraries(
     selection_sort
     selection
     square_matrix_multiply
+    stack
     water_jugs
     young_tableau
     ${CPPUTEST_LDFLGAS}
