Add some basic hash functions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(fibonacci STATIC "fibonacci.cpp")
 add_library(find_maximum_subarray STATIC "find_maximum_subarray.cpp")
 add_library(find_sum_pair STATIC "find_sum_pair.cpp")
 add_library(fuzzy_sort STATIC "fuzzy_sort.cpp")
+add_library(hash_function STATIC "hash_function.cpp")
 add_library(heap_sort STATIC "heap_sort.cpp")
 add_library(horners_rule STATIC "horners_rule.cpp")
 add_library(hybrid_sort STATIC "hybrid_sort.cpp")
@@ -66,6 +67,7 @@ target_link_libraries(
     find_maximum_subarray
     find_sum_pair
     fuzzy_sort
+    hash_function
     heap_sort
     horners_rule
     hybrid_sort
