--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -24,6 +24,7 @@ add_executable(
     "test_find_maximum_subarray.cpp"
     "test_find_sum_pair.cpp"
     "test_fuzzy_sort.cpp"
+    "test_hash_function.cpp"
     "test_heap_sort.cpp"
     "test_horners_rule.cpp"
     "test_hybrid_sort.cpp"
@@ -67,6 +68,7 @@ target_link_libraries(
     find_maximum_subarray
     find_sum_pair
     fuzzy_sort
+    hash_function
     heap_sort
     horners_rule
     hybrid_sort
