--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,6 +29,7 @@ add_library(insertion_sort STATIC "insertion_sort.cpp")
 add_library(linear_search STATIC "linear_search.cpp")
 add_library(merge_sort STATIC "merge_sort.cpp")
 add_library(monge_array STATIC "monge_array.cpp")
+add_library(open_address_hash_table STATIC "open_address_hash_table.cpp")
 add_library(priority_queue STATIC "priority_queue.cpp")
 add_library(quantile STATIC "quantile.cpp")
 add_library(queue STATIC "queue.cpp")
@@ -80,6 +81,7 @@ target_link_libraries(
     linear_search
     merge_sort
     monge_array
+    open_address_hash_table
     priority_queue
     quantile
     queue
