--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -36,6 +36,7 @@ add_executable(
     "test_merge_sort.cpp"
     "test_monge_array.cpp"
     "test_open_address_hash_table.cpp"
+    "test_perfect_hashing.cpp"
     "test_priority_queue.cpp"
     "test_quantile.cpp"
     "test_queue.cpp"
@@ -83,6 +84,7 @@ target_link_libraries(
     merge_sort
     monge_array
     open_address_hash_table
+    perfect_hashing
     priority_queue
     quantile
     queue
