--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -40,6 +40,7 @@ add_executable(
     "test_merge_sort.cpp"
     "test_monge_array.cpp"
     "test_open_address_hash_table.cpp"
+    "test_optimal_binary_search_tree.cpp"
     "test_order_statistic_tree.cpp"
     "test_perfect_hashing.cpp"
     "test_priority_queue.cpp"
@@ -94,6 +95,7 @@ target_link_libraries(
     merge_sort
     monge_array
     open_address_hash_table
+    optimal_binary_search_tree
     order_statistic_tree
     perfect_hashing
     priority_queue
