--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(count_in_range STATIC "count_in_range.cpp")
 add_library(count_inversions STATIC "count_inversions.cpp")
 add_library(counting_sort STATIC "counting_sort.cpp")
 add_library(d_ary_heap STATIC "d_ary_heap.cpp")
+add_library(depth_first_search STATIC "depth_first_search.cpp")
 add_library(deque STATIC "deque.cpp")
 add_library(doubly_linked_list STATIC "doubly_linked_list.cpp")
 add_library(fibonacci STATIC "fibonacci.cpp")
@@ -80,6 +81,7 @@ target_link_libraries(
     count_inversions
     counting_sort
     d_ary_heap
+    depth_first_search
     deque
     doubly_linked_list
     fibonacci
