--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -60,6 +60,7 @@ add_executable(
     "test_selection.cpp"
     "test_square_matrix_multiply.cpp"
     "test_stack.cpp"
+    "test_topological_sort.cpp"
     "test_water_jugs.cpp"
     "test_young_tableau.cpp"
 )
@@ -120,6 +121,7 @@ target_link_libraries(
     selection
     square_matrix_multiply
     stack
+    topological_sort
     water_jugs
     young_tableau
     ${CPPUTEST_LDFLGAS}
